# knexgpt

./: .gitignore  Dockerfile  k8s-deployment.yaml  pyproject.toml  readme.md
.cursor/: prd  s.txt
knexgpt/: __init__.py
knexgpt/agents/: __init__.py  base.py  data_enrichment.py  data_extraction.py  query_processing.py  validation.py
knexgpt/api/: app.py
knexgpt/communication/: base_queue.py  kafka_queue.py  message_queue.py  message_queue_client.py  rabbitmq_queue.py  redis_queue.py
knexgpt/data_processing/: chunkr_integration.py  firecrawl_integration.py  preprocessing_pipeline.py
knexgpt/db/: adapter.py  adapter_factory.py  arangodb_adapter.py  neptune_adapter.py  query_translator.py
knexgpt/ontology/: base.py
knexgpt/querying/: nl_to_cypher.py  rag.py
